Add tests for consent withdrawal functionality
- Introduce integration tests for withdrawing consent, ensuring that only the specified consent type is withdrawn while others remain granted.
- Implement unit tests to verify that the correct ledger fields are persisted during consent withdrawal, including receipt JSON generation and handling of optional withdrawal reasons.
- Enhance existing tests to validate the behavior of the consent service when processing withdrawal requests, ensuring accurate status updates and data integrity.